[package]
name = "escrow"
version = "0.1.0"
authors = ["pyth"]
edition = "2021"
publish = false

[dependencies]
async-channel = "2.2.0"
iced_runtime = "0.12.1"
log = "0.4.21"
nostr-sdk = { version = "0.29.0", features = ["default"] }
tokio = "1.37.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
bitcoin-amount = { version = "0.1.4", features = ["serde", "serde_json"] }
miniscript = { version = "11.0.0", features = ["serde", "compiler", "actual-serde", "rand"] }
chrono = "0.4.38"
colored = "2.1.0"
fern = "0.6.2"
reqwest = { version = "0.12.4", features = ["json"] }
hex = "0.4.3"
async-hwi = "0.0.17"
bip39 = {version = "2.0.0", features = ["rand"]}
dirs = "5.0.1"
serde_yaml = "0.9.34"
clap = {version = "4.5.16", features = ["derive"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.12.1",default-features = false, features = ["image", "debug", "webgl", "qr_code"]}
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.12.1", features = ["image", "debug", "webgl", "qr_code"]}


console_error_panic_hook = "0.1"
console_log = "1.0"
